Timewindow: fix styles for interval options configuration on mobile

--- a/ui-ngx/src/app/shared/components/time/interval-options-config-panel.component.scss
+++ b/ui-ngx/src/app/shared/components/time/interval-options-config-panel.component.scss
@@ -13,6 +13,8 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+@import '../../../../scss/constants';
+
 :host {
   .tb-interval-options-form {
     height: 100%;
@@ -27,12 +29,18 @@
 
     .tb-form-table-header-cell, .tb-form-table-row-cell {
       &.tb-interval {
-        flex: 1 1 30%;
-        width: 30%;
+        flex: 1 1 100%;
+        min-width: calc(30% - 8px);
+        max-width: calc(30% - 8px);
+        @media #{$mat-gt-md} {
+          min-width: calc(30% - 12px);
+          max-width: calc(30% - 12px);
+        }
       }
       &.tb-agg-interval {
-        flex: 1 1 70%;
-        width: 70%;
+        flex: 1 1 100%;
+        min-width: 70%;
+        max-width: 70%;
       }
     }
 
@@ -43,6 +51,22 @@
 
     .tb-form-hint {
       flex-shrink: 0;
+    }
+
+    ::ng-deep {
+      .tb-interval-option {
+        display: block;
+
+        .mdc-form-field {
+          width: 100%;
+        }
+
+        .mdc-label {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
     }
   }
 }
